      interface.

    - Moved URLTool to CMFCore. Added interface and basic tests.
      (Collector #67)

    - Added FSFile skin object, in order to allow .swf files (et al.) in 
      skins

    - Added 'listMetaTags' skin method, which filters the DublinCore
      metadata into a form suitable for inclusion as <meta> tags.

    - Protected the Pending review action in DefaultWorkflow by
      ReviewPortalContent (Collector #52).

    - Raise ValueError instead of TypeError in TypesTool.getActionById
      if the action is not found (Collector #56).

  Bug Fixes

    - Skinnable: Changed docstring for setupCurrentSkin and added 
      docstring to changeSkin: the latter is now used to set skin
      manually mid-request. (Collector #27)

    - Document: Ensured that setFormat('text/plain') does not overwrite
      text_format if text_format is 'plain'. (Collector #140)

    - Action providers: Default _actions' are now tuples, not lists.
      (Collector #123)

    - Document: Ensured that 'edit()' and 'PUT()' strip of xhtml headers and
      html headers including DOCTYPE declarations. (Collector #41)

    - Fixed some minor buglets. (Collector #80, #94 and #95)

    - Ensure that a couple of calls to string.split only split into a 
      maximum of two parts. 
      (Collector #82)

    - Enabled the CMF to be installed in a PRODUCTS_PATH.
      In doing so, also made it easier to move CMF sites between 
      Windows and Unix.
      (Collector #64)

    - Multimodule checkin to convert calls from user.getUserName() to
      user.getId() where appropriate.  User names should not be used
      as immutable references, while user ids should.  The distinction
      is not clearly enforcd in the stock user folder or any current user
      folder implementations, but newer user folder implementations
      will rely upon it.

    - Remove redundant VERSION.txt files;  the canonical spelling is
      'version.txt' (Collector #13).